Add pattern list